# warehouse

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: django.yml
apps/customers/: admin.py  models.py
apps/index/: apps.py  models.py
apps/index/migrations/: 0001_initial.py
apps/orders/: admin.py  models.py
apps/warehouse/: admin.py  models.py
apps/warehouse/templatetags/: warehouse_tags.py
base/: urls.py  wsgi.py
base/settings/: base.py  dev.py
core/: settings.py  urls.py  wsgi.py
core/settings/: base.py  dev.py
static/css/: warehouse.css
templates/: base.html
templates/base/: 500.html
templates/includes/: carousel.html  dist.html  head.html  header.html
templates/index/: home_page.html
templates/wagtailcore/: page.html
warehouse/settings/: base.py  dev.py
